--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ repository = "https://github.com/milyin/telluride"
 documentation = "https://docs.rs/telluride"
 readme = "README.md"
 keywords = ["telegram", "teloxide", "markdown", "bot", "telegram-bot"]
-categories = ["development-tools", "telegram-bots"] 
+categories = ["development-tools", "telegram-bots"]
+description = "The extension for teloxide library providing extended and compile-time safe API"
 
 [dependencies]
 teloxide = { version = "0.17.0", features = ["macros"] }
