--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,8 @@ description = "The extension for teloxide library providing extended and compile
 
 [dependencies]
 teloxide = { version = "0.17.0", features = ["macros"] }
+async-trait = "0.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9.33"
+tokio = { version =  "1.8", features = ["fs", "sync", "macros"] }
 
