--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,6 @@ async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.33"
 tokio = { version =  "1.8", features = ["fs", "sync", "macros"] }
+log = "0.4"
+pretty_env_logger = "0.5"
 
